# libephemeris

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CALCS.md  CHANGELOG.md  CLAUDE.md  CLI.md  DEEP_VALIDATION_PLAN.md  EXTENDED_VALIDATION_PLAN.md  EXTENDED_VALIDATION_PLAN_V2.md  FINAL_VALIDATION_PLAN.md  FIX.md  HORI_DEPRIT_PLAN.md  KR_FIX.md  LIST.md  MANIFEST.in  MANUAL_TODO.md  MOSHIER_TODO.md  NOTES.md  NOTICE.md  PLAN.md  PLAN_DOCS_ORDER.md  PRECISION_RECAP.md  README.md  SPK_TYPE21_APPARENT_POSITIONS_FIX.md  TEST_TODO.md  TODO.md  TODO_HOUSES.md  TODO_LEB.md  TODO_PRECISION.md  V3_RETROGRADE_PROBLEM.md  VALIDATIONS.md  codecov.yml  conftest.py  pyproject.toml  pytest.ini  test_context_threading.py
.github/workflows/: ci.yml
.opencode/agents/: obsessive-tester.md
compare_scripts/: __init__.py  compare_benchmark.py  compare_coordinates.py  compare_crossings_ext.py  compare_eclipses.py  compare_fixedstars.py  compare_heliacal.py  compare_houses.py  compare_houses_ext.py  compare_hypothetical.py  compare_lunar.py  compare_minor_bodies.py  compare_occultations.py  compare_orbital.py  compare_phenomena.py  compare_rise_transit.py  compare_sidereal.py  compare_time.py  compare_utilities.py  comparison_utils.py  debug_bary_sun.py  debug_neptune_mag.py  debug_neptune_old.py  debug_neptune_v0.py  debug_per_date.py  deep_analysis.py  deep_analysis_r2.py  deep_audit_bary_helio.py  deep_audit_deltat_sidereal.py  deep_audit_extreme_dates.py  deep_audit_fixedstars.py  deep_audit_houses_extreme.py  deep_audit_obliquity_nutation.py  deep_audit_pheno.py  deep_audit_velocities.py  generate_precision_report.py  investigate_mag.py  moon_mag_analysis.py  neptune_secular.py  run_all_compare.py  (+2 more)
compare_scripts/tests/: __init__.py  conftest.py  test_all_houses.py  test_ayanamsha.py  (+57 more)
data/: golden_values.json  horizons_cross_validation.json  leb_accuracy_sweep_medium.json
docs/: ASTROPY_BENEFITS.md  AYANAMSHA.md  FULL_RANGE_COVERAGE_PLAN.md  HOUSE_SYSTEMS.md  INTERPOLATED_APOGEE.md  KEPLERIAN_TODO.md  LANDING.md  LEB_GUIDE.md  LEB_PLAN.md  PERFORMANCE_AND_LEB.md  PLANET_CENTERS_SPK.md  PRECISION.md  PRECISION_TUNING.md  PYERFA_BENEFITS.md  README.md  REBOUND_BENEFITS.md  TRUE_LILITH_METHODS.md  VERIFICATION.md  api_reference.rst  conf.py  cookbook.py  divergences.md  flags.md  horizons-backend.md  index.rst  interpolated_perigee_methodology.md  methodology.md  methodology_lunar_apsides.md  migration-guide.md  testing.md
examples/: basic_usage.py  fixed_stars.py  house_systems.py  rise_set_transit.py  sidereal_calculations.py  spk_usage.py  thread_safe_context.py
libephemeris/: __init__.py  _config_toml.py  _dotenv.py  _init_wizard.py  angles.py  arabic_parts.py  astrometry.py  astropy_integration.py  cache.py  cli.py  cli_shared.py  constants.py  context.py  crossing.py  download.py  eclipse.py  erfa_nutation.py  exceptions.py  extinction.py  fast_calc.py  fixed_stars.py  heliacal.py  horizons_backend.py  houses.py  hypothetical.py  iers_data.py  leb2_reader.py  leb_composite.py  leb_compression.py  leb_format.py  leb_reader.py  logging_config.py  lunar.py  lunar_apse_corrections.py  lunar_corrections.py  minor_bodies.py  multi_epoch_data.py  planetary_moons.py  planets.py  profiling.py  (+10 more)
marketing/: landing.md
plans/: docs-reorganization.md  hyper-validation-plan.md  hyper-validation-report.json  hyper-validation-run5.json  hyper-validation-run6.json  leb-base-tier-verification-200.md  leb-compression.md  leb-medium-tier-pyswisseph-results.md  leb-parameter-tuning.md  precision-and-api-alignment.md  precision-investigation-true-node-lilith.md  precision-v3-final.md  pyswisseph-api-compat-phase2.md  pyswisseph-compat-verification.md  validation-plan-v2.md  validation-suite-100k.md
proposals/: horizons-live-backend.md  leb-optimization-findings.md  leb2-compressed-format.md  leb2-implementation-plan.md
release-notes/: v0.22.0.md  v0.23.0.md  v0.24.0.md  v1.0.0.md  v1.0.0a12.md  v1.0.0a2.md  v1.0.0a3.md  v1.0.0a4.md  v1.0.0a5.md  v1.0.0a6.md  v1.0.0a7.md  v1.0.0a8.md
releases/: v0.23.0.md
scripts/: _tier_diagnostic.py  bench_leb_chart.py  build_manual.py  build_star_catalog.py  calibrate_perigee_perturbations.py  calibrate_true_node.py  check_leb_params.py  derive_hypothetical_elements.py  diagnose_chebyshev.py  diagnose_errors.py  diagnose_leb_read.py  diagnose_pipeline.py  download_max_range_spk.py  download_spk.py  generate_golden.py  generate_leb.py  generate_leb2.py  generate_lunar_corrections.py  generate_manual_epub.py  generate_multi_epoch_elements.py  generate_planet_centers_spk.py  generate_short_period_corrections.py  horizons_cross_validate.py  hyper_validate.py  leb_accuracy_sweep.py  measure_medium_errors.py  measure_precision.py  profile_hot_paths.py  prototype_cartesian_v3.py  prototype_v2_fix.py  release_leb.py  release_planet_centers.py  run_validation_suite.py  sweep_leb_params.py  test_chebyshev_params.py  test_horizons_precision.py  test_horizons_vs_leb.py  test_leb2_precision.py  tier_diagnostic_base.py  tier_diagnostic_extended.py  (+2 more)
tasks/: MEGA_VERIFICATION.md  TODO.md
tests/: conftest.py  test_api_reference.py  test_arabic_parts.py  test_assist_fallback.py  test_asteroid_by_number.py  test_asteroid_name_lookup.py  test_astropy_integration.py  test_auto_spk_fallback.py  test_auto_spk_strict_precision.py  test_ayanamsha_all_modes.py  test_ayanamsha_documentation.py  test_azalt.py  test_bayer_designation.py  test_behenian_stars.py  test_besselian_d.py  test_besselian_derivatives.py  test_besselian_elements.py  test_besselian_l1.py  test_besselian_l2.py  test_besselian_mu.py  test_besselian_x.py  test_besselian_y.py  test_build_star_catalog.py  test_cache.py  test_calc_body_moshier.py  test_centaurus_stars.py  test_changelog.py  test_cli_status.py  test_close.py  test_compare_benchmark.py  test_compare_scripts.py  test_concurrency_stress.py  test_constants.py  test_context_extended.py  test_context_thread_safety.py  test_cookbook.py  test_coordinate_transformations.py  test_coordinate_validation.py  test_cotrans.py  test_cross_validation_astropy.py  (+139 more)
(+698 files in other folders)
