[project]
name = "libephemeris"
version = "1.0.0a1"
description = "A high-precision, open-source astronomical ephemeris library for Python, powered by Skyfield."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Giacomo Battaglia", email = "giacomo@libephemeris.dev" }
]
maintainers = [
    { name = "Giacomo Battaglia", email = "giacomo@libephemeris.dev" }
]
keywords = [
    "astronomy",
    "ephemeris",
    "astrology",
    "planetary",
    "skyfield",
    "jpl-de440",
    "astrological",
    "celestial",
    "horoscope",
    "zodiac",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "skyfield>=1.54",  # 1.54: deflectors= arg, 30% faster risings/settings, NumPy array Time subtraction
    "skyfield-data>=7.0.0",
    "astroquery>=0.4.7",  # Required for automatic SPK kernel downloads from JPL Horizons
    "certifi",  # SSL certificates for HTTPS connections to JPL Horizons
    "spktype21>=0.1.0",  # Support for SPK type 21 files from JPL Horizons (asteroids, comets)
    "pyerfa>=2.0.0",  # IAU ERFA: high-precision nutation (IAU 2006/2000A), obliquity, precession, aberration
]

[project.optional-dependencies]
# Star catalog building (scripts/build_star_catalog.py)
stars = [
    "astropy>=5.0.0",
]
# N-body integration for asteroid orbit propagation
nbody = [
    "rebound>=4.0.0",
    "assist>=1.1.0",
]
# All optional features
all = [
    "rebound>=4.0.0",
    "assist>=1.1.0",
]
dev = [
    "black>=25.1.0",
    "mypy>=1.0.0",
    "poethepoet>=0.37.0,<0.38.0",
    "pyswisseph>=2.10.3.2",  # Comparison/validation tests only — not a runtime dependency
    "pytest>=8.0.0,<9.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.6",
    "pytest-cov>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pytest-sugar>=1.1.1",
    "hypothesis>=6.0.0",
    "spiceypy>=6.0.0",  # For generating compact planet center SPK files
    "astropy>=5.0.0",  # Cross-validation against professional astronomy standards (dev only)
    "ebooklib>=0.20",  # EPUB generation for manual (scripts/generate_manual_epub.py)
    "markdown>=3.7",  # Markdown-to-HTML for EPUB manual generation
    "pyyaml>=6.0",  # YAML metadata parsing for EPUB manual generation
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/g-battaglia/libephemeris"
Documentation = "https://github.com/g-battaglia/libephemeris#readme"
Repository = "https://github.com/g-battaglia/libephemeris"
Issues = "https://github.com/g-battaglia/libephemeris/issues"
Changelog = "https://github.com/g-battaglia/libephemeris/blob/main/CHANGELOG.md"

[project.scripts]
libephemeris = "libephemeris.cli:main"



[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libephemeris"]

[tool.setuptools.package-data]
libephemeris = ["py.typed", "data/*.csv"]

[tool.poe.tasks]
format = {cmd = "ruff format .", help = "Auto-format all Python files (ruff, line-length 88)"}
format-black = {cmd = "black libephemeris tests", help = "Auto-format with black (legacy, prefer 'format')"}
lint = {cmd = "ruff check . --fix", help = "Lint and auto-fix all Python files (ruff)"}

# Test commands - fast variants exclude @pytest.mark.slow tests
test = {cmd = "pytest -m \"not slow\"", help = "All tests excluding @slow — sequential, includes unit + compare if pyswisseph installed"}
"test:full" = {cmd = "pytest", help = "ALL tests including @slow (iterative searches, hypothesis) — very slow, sequential"}
"test:progress" = {cmd = "pytest --no-header -q -m \"not slow\"", help = "Same as 'test' but compact dots-only output, good for CI"}
"test:fast" = {cmd = "pytest -n auto -m \"not slow\"", help = "All tests excluding @slow — parallel across CPU cores (-n auto)"}
"test:full:fast" = {cmd = "pytest -n auto", help = "ALL tests including @slow — parallel, still slow due to iterative tests"}

# Essential subset - 1 test file per library module, parallel (~490 tests vs ~5890 total)
# Covers: planets, houses, eclipse, lunar, fixed_stars, minor_bodies, hypothetical,
#         heliacal, rise/transit, arabic_parts, planetary_moons, time_utils,
#         exceptions, context/state, sidereal, utils, constants/API
"test:fast:essential" = {help = "Essential subset: 1 test per module, parallel (~490 tests, ~20s). Quick sanity check", cmd = """pytest -n auto -m "not slow" \
    tests/test_planets/test_central_difference_velocity.py \
    tests/test_planets/test_nod_aps.py \
    tests/test_houses/test_house_algorithms.py \
    tests/test_lunar_eclipse.py \
    tests/test_lunar/test_interpolated_apogee.py \
    tests/test_fixed_stars/test_fixstar2.py \
    tests/test_asteroid_by_number.py \
    tests/test_hypothetical.py \
    tests/test_heliacal.py \
    tests/test_rise_trans.py \
    tests/test_arabic_parts.py \
    tests/test_planetary_moons.py \
    tests/test_time/test_date_conversion.py \
    tests/test_exception_hierarchy.py \
    tests/test_close.py \
    tests/test_sidereal/test_ayanamsa_precision.py \
    tests/test_deg_midp.py \
    tests/test_get_planet_name.py"""}

# Smoke subset - 1+ test file per library module, parallel (~1460 tests)
# Covers every libephemeris/*.py module: all of "essential" plus angles, cache,
# spk, spk_auto, state, extinction, logging, packaging, dotenv, erfa_nutation,
# iers_data, delta-T, UTC, true_node_terms, mean_lilith, edge_cases,
# retrograde, leb_format, leb_reader, fast_calc, profiling, type_safety,
# golden regression, coordinate_validation
"test:smoke" = {help = "Smoke test: 1+ test per module, parallel (~1460 tests, ~30s). Covers all libephemeris modules", cmd = """pytest -n auto -m "not slow" \
    tests/test_planets/test_central_difference_velocity.py \
    tests/test_planets/test_nod_aps.py \
    tests/test_houses/test_house_algorithms.py \
    tests/test_lunar_eclipse.py \
    tests/test_lunar/test_interpolated_apogee.py \
    tests/test_lunar/test_mean_lilith_enhanced.py \
    tests/test_lunar/test_true_node_terms.py \
    tests/test_fixed_stars/test_fixstar2.py \
    tests/test_asteroid_by_number.py \
    tests/test_hypothetical.py \
    tests/test_heliacal.py \
    tests/test_rise_trans.py \
    tests/test_arabic_parts.py \
    tests/test_planetary_moons.py \
    tests/test_time/test_date_conversion.py \
    tests/test_time/test_utc_to_jd.py \
    tests/test_time/test_iers_delta_t.py \
    tests/test_time/test_deltat_smh2016.py \
    tests/test_exception_hierarchy.py \
    tests/test_close.py \
    tests/test_sidereal/test_ayanamsa_precision.py \
    tests/test_deg_midp.py \
    tests/test_get_planet_name.py \
    tests/test_cs2degstr.py \
    tests/test_cache.py \
    tests/test_spk.py \
    tests/test_spk_auto.py \
    tests/test_ephemeris_config.py \
    tests/test_extinction.py \
    tests/test_logging_config.py \
    tests/test_packaging.py \
    tests/test_dotenv.py \
    tests/test_type_safety.py \
    tests/test_golden_regression.py \
    tests/test_coordinate_validation.py \
    tests/test_profiling.py \
    tests/test_retrograde_stations.py \
    tests/test_edge_cases/test_boundaries.py \
    tests/test_precision/test_erfa_nutation.py \
    tests/test_leb/test_leb_format.py \
    tests/test_leb/test_leb_reader.py \
    tests/test_leb/test_fast_calc.py"""}

# Unit tests (tests/ directory only, no pyswisseph comparison)
"test:unit" = {cmd = "pytest tests/ -v -m \"not slow\"", help = "Unit tests excluding @slow — sequential, verbose output (~5890 tests, ~2 min)"}
"test:unit:full" = {cmd = "pytest tests/ -v", help = "ALL unit tests including @slow — sequential, very slow (~10+ min)"}
"test:unit:fast" = {cmd = "pytest tests/ -n auto -m \"not slow\"", help = "Unit tests excluding @slow — parallel across CPU cores (~1 min)"}

# Unit tests in LEB mode (uses precomputed Chebyshev ephemeris for ~14x faster Skyfield fallback)
"test:unit:leb" = {cmd = "pytest tests/ -v -m \"not slow\" --calc-mode leb", env = {LIBEPHEMERIS_LEB = "data/leb/ephemeris_medium.leb"}, help = "Unit tests in LEB mode — sequential, verbose. Requires data/leb/ephemeris_medium.leb"}
"test:unit:leb:full" = {cmd = "pytest tests/ -v --calc-mode leb", env = {LIBEPHEMERIS_LEB = "data/leb/ephemeris_medium.leb"}, help = "ALL unit tests in LEB mode including @slow — sequential, very slow"}
"test:unit:leb:fast" = {cmd = "pytest tests/ -n auto -m \"not slow\" --calc-mode leb", env = {LIBEPHEMERIS_LEB = "data/leb/ephemeris_medium.leb"}, help = "RECOMMENDED: unit tests in LEB mode, parallel (~5890 tests, ~1 min). Best for dev"}

# Comparison tests (compare_scripts/tests/) — REQUIRE pyswisseph installed
# Verify libephemeris output matches pyswisseph (the C reference implementation)
"test:compare" = {cmd = "pytest compare_scripts/tests/ -v -m \"not slow\"", help = "Compare libephemeris vs pyswisseph using live Skyfield/DE440 calculations (no @slow)"}
"test:compare:full" = {cmd = "pytest compare_scripts/tests/ -v", help = "Compare libephemeris vs pyswisseph — all tests including @slow"}
"test:compare:fast" = {cmd = "pytest compare_scripts/tests/ -n auto -m \"not slow\"", help = "Compare libephemeris vs pyswisseph — parallel across CPU cores"}

# Comparison tests: explicit JPL/Skyfield mode (same as default but forces LIBEPHEMERIS_COMPARE_MODE)
"test:compare:jpl" = {cmd = "pytest compare_scripts/tests/ -v -m \"not slow\"", env = {LIBEPHEMERIS_COMPARE_MODE = "skyfield"}, help = "Compare vs pyswisseph with explicit Skyfield mode env var (no @slow)"}
"test:compare:jpl:full" = {cmd = "pytest compare_scripts/tests/ -v", env = {LIBEPHEMERIS_COMPARE_MODE = "skyfield"}, help = "Compare vs pyswisseph with explicit Skyfield mode — all tests"}

# Comparison tests: LEB mode — validates that precomputed LEB matches pyswisseph
"test:compare:leb" = {cmd = "pytest compare_scripts/tests/ -v -m \"not slow\"", env = {LIBEPHEMERIS_COMPARE_MODE = "leb", LIBEPHEMERIS_LEB = "data/leb/ephemeris_medium.leb"}, help = "Compare LEB binary ephemeris vs pyswisseph — validates LEB accuracy (no @slow)"}
"test:compare:leb:full" = {cmd = "pytest compare_scripts/tests/ -v", env = {LIBEPHEMERIS_COMPARE_MODE = "leb", LIBEPHEMERIS_LEB = "data/leb/ephemeris_medium.leb"}, help = "Compare LEB binary ephemeris vs pyswisseph — all tests including @slow"}

# Tier diagnostics — print coordinates, velocities, and data source for all supported bodies
"diag:base" = {cmd = "python scripts/tier_diagnostic_base.py", help = "Print all body positions for base tier (de440s, 1850-2150) to verify data integrity"}
"diag:medium" = {cmd = "python scripts/tier_diagnostic_medium.py", help = "Print all body positions for medium tier (de440, 1550-2650) to verify data integrity"}
"diag:extended" = {cmd = "python scripts/tier_diagnostic_extended.py", help = "Print all body positions for extended tier (de441, -13200 to +17191) to verify data integrity"}
"diag:download" = {cmd = "python -c \"import libephemeris as eph; eph.ensure_all_ephemerides(show_progress=True)\"", help = "Download all required data files (BSP kernels, delta-T, leap seconds) with progress bar"}

# Tier-specific SPK downloads for minor bodies (Chiron, Ceres, Pallas, Juno, Vesta)
"spk:download:base" = {cmd = "python -c \"import libephemeris as eph; eph.set_precision_tier('base'); eph.ensure_all_ephemerides(show_progress=True)\"", help = "Download asteroid SPK21 files for base tier (1850-2150 date range)"}
"spk:download:medium" = {cmd = "python -c \"import libephemeris as eph; eph.set_precision_tier('medium'); eph.ensure_all_ephemerides(show_progress=True)\"", help = "Download asteroid SPK21 files for medium tier (1550-2650 date range)"}
"spk:download:extended" = {cmd = "python scripts/download_max_range_spk.py", help = "Download max-range asteroid SPK files for extended tier from JPL Horizons"}

# ASSIST data download (REBOUND/ASSIST n-body integration for high-precision TNO orbits)
"download:assist" = {cmd = "python -m libephemeris.cli download:assist", help = "Download REBOUND/ASSIST integration data (~120 MB) for high-precision TNO/asteroid orbits"}

# LEB binary ephemeris download (precomputed Chebyshev polynomials, ~14x speedup over Skyfield)
"download:leb:base" = {cmd = "python -m libephemeris.cli download:leb:base", help = "Download pre-built LEB file for base tier (de440s, 1850-2150, ~5 MB)"}
"download:leb:medium" = {cmd = "python -m libephemeris.cli download:leb:medium", help = "Download pre-built LEB file for medium tier (de440, 1550-2650, ~20 MB)"}
"download:leb:extended" = {cmd = "python -m libephemeris.cli download:leb:extended", help = "Download pre-built LEB file for extended tier (de441, -5000 to 5000, ~180 MB)"}

# Planet centers SPK generation — builds COB-corrected SPK for gas giant planet centers
# (requires spiceypy; downloads satellite ephemeris SPKs from JPL)
"generate-planet-centers:base" = {cmd = "python scripts/generate_planet_centers_spk.py --tier base", help = "Build planet-center SPK for base tier (sub-arcsec Jupiter/Saturn/Uranus/Neptune)"}
"generate-planet-centers:medium" = {cmd = "python scripts/generate_planet_centers_spk.py --tier medium", help = "Build planet-center SPK for medium tier (sub-arcsec gas giants)"}
"generate-planet-centers:extended" = {cmd = "python scripts/generate_planet_centers_spk.py --tier extended", help = "Build planet-center SPK for extended tier (sub-arcsec gas giants)"}
"generate-planet-centers:all" = {cmd = "python scripts/generate_planet_centers_spk.py --all", help = "Build planet-center SPK for all three tiers at once"}

# Legacy alias
"generate-planet-centers-spk" = {cmd = "python scripts/generate_planet_centers_spk.py --tier medium", help = "(Legacy alias) Same as generate-planet-centers:medium"}

coverage = {cmd = "pytest --cov=libephemeris --cov-report=term-missing --cov-report=xml --cov-report=html -m \"not slow\"", help = "Run tests with code coverage (term + XML + HTML reports, no @slow)"}
"coverage:full" = {cmd = "pytest --cov=libephemeris --cov-report=term-missing --cov-report=xml --cov-report=html", help = "Run ALL tests with code coverage including @slow"}
typecheck = {cmd = "mypy libephemeris", help = "Static type checking with mypy on libephemeris package"}

# Lunar test suites — tests for nodes, apsides, Lilith, and ELP2000 perturbations
"test:lunar" = {cmd = "pytest tests/test_lunar/ -v -m \"not slow\"", help = "All lunar module tests (nodes, Lilith, perigee, apogee) excluding @slow"}
"test:lunar:perigee" = {cmd = "pytest -v tests/test_lunar/test_elp2000_perigee_perturbations.py tests/test_lunar/test_interpolated_perigee.py tests/test_lunar/test_osculating_perigee.py", help = "Lunar perigee tests: ELP2000 perturbation coefficients, interpolated and osculating perigee"}
"test:lunar:apogee" = {cmd = "pytest -v tests/test_lunar/test_elp2000_apogee_perturbations.py tests/test_lunar/test_interpolated_apogee.py", help = "Lunar apogee tests: ELP2000 perturbation coefficients and interpolated apogee"}
"test:lunar:lilith" = {cmd = "pytest -v tests/test_lunar/test_mean_lilith_enhanced.py tests/test_lunar/test_true_lilith_precision.py tests/test_lunar/test_true_lilith_annual_equation.py tests/test_lunar/test_true_lilith_evection_secondary.py tests/test_lunar/test_true_lilith_parallactic_inequality.py tests/test_lunar/test_true_lilith_reduction_to_ecliptic.py tests/test_lunar/test_true_lilith_solar_perturbation.py tests/test_lunar/test_true_lilith_variation.py", help = "Lilith tests: mean Lilith, true Lilith precision, all perturbation terms (8 test files)"}

# LEB test suites — tests for the binary ephemeris format, reader, and fast-path calculator
"test:leb" = {cmd = "pytest tests/test_leb/ -v -m \"not slow\"", help = "LEB module tests: binary format read/write, Chebyshev reader, fast_calc pipeline (no @slow)"}
"test:leb:precision" = {cmd = "pytest tests/test_leb/test_leb_precision.py -v", help = "LEB precision sweep: verify Chebyshev approximation error for all bodies across all tiers"}
"test:leb:precision:quick" = {cmd = "pytest tests/test_leb/test_leb_precision.py -v -k \"medium\"", help = "LEB precision sweep for medium tier only (faster subset of test:leb:precision)"}

# LEB vs Skyfield comparison — verify LEB Chebyshev output matches live Skyfield calculations
"test:leb:compare" = {cmd = "pytest tests/test_leb/compare/ -v -m leb_compare --ignore=tests/test_leb/compare/base --ignore=tests/test_leb/compare/medium --ignore=tests/test_leb/compare/extended --ignore=tests/test_leb/compare/crosstier", help = "LEB vs Skyfield comparison for medium tier (legacy flat tests in compare/ root)"}
"test:leb:compare:quick" = {cmd = "pytest tests/test_leb/compare/ -v -m \"leb_compare and not slow\" --ignore=tests/test_leb/compare/base --ignore=tests/test_leb/compare/medium --ignore=tests/test_leb/compare/extended --ignore=tests/test_leb/compare/crosstier", help = "LEB vs Skyfield quick comparison, medium tier legacy (no @slow)"}

# LEB vs Skyfield — structured per-tier comparison suites
"test:leb:compare:medium" = {cmd = "pytest tests/test_leb/compare/medium/ -v -m leb_compare_medium", help = "LEB vs Skyfield: medium tier (de440, 1550-2650). Positions, speeds, sidereal, equatorial"}
"test:leb:compare:medium:quick" = {cmd = "pytest tests/test_leb/compare/medium/ -v -m \"leb_compare_medium and not slow\"", help = "LEB vs Skyfield: medium tier quick (no @slow, ~2 min)"}
"test:leb:compare:base" = {cmd = "pytest tests/test_leb/compare/base/ -v -m leb_compare_base", help = "LEB vs Skyfield: base tier (de440s, 1850-2150). Positions, speeds, sidereal, equatorial"}
"test:leb:compare:base:quick" = {cmd = "pytest tests/test_leb/compare/base/ -v -m \"leb_compare_base and not slow\"", help = "LEB vs Skyfield: base tier quick (no @slow)"}
"test:leb:compare:extended" = {cmd = "pytest tests/test_leb/compare/extended/ -v -m leb_compare_extended", help = "LEB vs Skyfield: extended tier (de441, -5000 to 5000). Positions, speeds, sidereal"}
"test:leb:compare:extended:quick" = {cmd = "pytest tests/test_leb/compare/extended/ -v -m \"leb_compare_extended and not slow\"", help = "LEB vs Skyfield: extended tier quick (no @slow)"}

# LEB cross-tier and combined
"test:leb:compare:crosstier" = {cmd = "pytest tests/test_leb/compare/crosstier/ -v -m leb_compare_crosstier", help = "Cross-tier consistency: verify base/medium/extended LEB files agree on overlapping date ranges"}
"test:leb:compare:all" = {cmd = "pytest tests/test_leb/compare/ -v -m \"leb_compare or leb_compare_base or leb_compare_extended or leb_compare_crosstier\"", help = "LEB vs Skyfield: ALL tiers + cross-tier combined (comprehensive, slow)"}

# Lunar corrections and calibration
[tool.poe.tasks.generate-lunar-corrections]
cmd = "python scripts/generate_lunar_corrections.py --force"
help = "Regenerate precomputed correction tables for mean lunar elements (requires de441.bsp)"

[tool.poe.tasks.calibrate-perigee]
cmd = "python scripts/calibrate_perigee_perturbations.py --start-year 1500 --end-year 2500 --output /tmp/perigee_calibration.json"
help = "Calibrate perigee perturbation coefficients against JPL DE441 (full run, ~30 min)"
envfile = ".env"

[tool.poe.tasks."calibrate-perigee:quick"]
cmd = "python scripts/calibrate_perigee_perturbations.py --quick --output /tmp/perigee_calibration_quick.json"
help = "Quick perigee calibration (100-year range, ~2 min, for validation)"
envfile = ".env"

# Keplerian fallback — multi-epoch element generation
[tool.poe.tasks."keplerian:generate-multi-epoch"]
cmd = "python scripts/generate_multi_epoch_elements.py"
help = "Generate multi-epoch Keplerian elements from SPK files (20-year intervals, all bodies)"

[tool.poe.tasks."keplerian:generate-multi-epoch:dry-run"]
cmd = "python scripts/generate_multi_epoch_elements.py --dry-run"
help = "Show available SPK files and epoch grid without generating (Keplerian fallback)"

# LEB (binary ephemeris) generation — full (all bodies at once)
[tool.poe.tasks."leb:generate:base"]
cmd = "python scripts/generate_leb.py --tier base --verify"
help = "Generate base tier LEB file (de440s, 1850-2150)"

[tool.poe.tasks."leb:generate:medium"]
cmd = "python scripts/generate_leb.py --tier medium --verify"
help = "Generate medium tier LEB file (de440, 1550-2650)"

[tool.poe.tasks."leb:generate:extended"]
cmd = "python scripts/generate_leb.py --tier extended --verify"
help = "Generate extended tier LEB file (de441, -5000 to 5000)"

[tool.poe.tasks."leb:generate:all"]
sequence = ["leb:generate:base", "leb:generate:medium", "leb:generate:extended"]
help = "Generate LEB files for all three tiers"

# LEB group generation — generate each body group independently, then merge.
# This avoids macOS fork-deadlock issues with multiprocessing and allows
# regenerating a single group without redoing everything.
[tool.poe.tasks."leb:generate:base:planets"]
cmd = "python scripts/generate_leb.py --tier base --group planets"
help = "Generate base tier planets group (Sun-Pluto, Earth)"

[tool.poe.tasks."leb:generate:base:asteroids"]
cmd = "python scripts/generate_leb.py --tier base --group asteroids"
help = "Generate base tier asteroids group (Chiron, Ceres-Vesta)"

[tool.poe.tasks."leb:generate:base:analytical"]
cmd = "python scripts/generate_leb.py --tier base --group analytical"
help = "Generate base tier analytical group (nodes, Lilith, Uranians)"

[tool.poe.tasks."leb:generate:base:merge"]
cmd = """python scripts/generate_leb.py --tier base --merge \
data/leb/ephemeris_base_planets.leb \
data/leb/ephemeris_base_asteroids.leb \
data/leb/ephemeris_base_analytical.leb \
--verify"""
help = "Merge base tier partial files into ephemeris_base.leb"

[tool.poe.tasks."leb:generate:base:groups"]
sequence = ["leb:generate:base:planets", "leb:generate:base:asteroids", "leb:generate:base:analytical", "leb:generate:base:merge"]
help = "Generate base tier via groups (planets + asteroids + analytical) then merge"

[tool.poe.tasks."leb:generate:base:single"]
cmd = "python scripts/generate_leb.py --tier base --single --verify"
help = "Generate base tier one body at a time (lowest memory usage)"

# Targeted body generation — generate a single body (or comma-separated list).
# Accepts numeric IDs or names (case-insensitive).
# Usage: poe leb:generate:base:body moon
#        poe leb:generate:base:body "moon,sun,mercury"
#        poe leb:generate:base:body 1
[tool.poe.tasks."leb:generate:base:body"]
cmd = "python scripts/generate_leb.py --tier base --bodies ${body}"
help = "Generate base tier for specific body(ies) (e.g. 'moon', '1,2,3', 'sun,mercury')"
args = [{name = "body", positional = true, required = true, help = "Body ID(s) or name(s), comma-separated"}]

# Medium tier group generation
[tool.poe.tasks."leb:generate:medium:planets"]
cmd = "python scripts/generate_leb.py --tier medium --group planets"
help = "Generate medium tier planets group (Sun-Pluto, Earth)"

[tool.poe.tasks."leb:generate:medium:asteroids"]
cmd = "python scripts/generate_leb.py --tier medium --group asteroids"
help = "Generate medium tier asteroids group (Chiron, Ceres-Vesta)"

[tool.poe.tasks."leb:generate:medium:analytical"]
cmd = "python scripts/generate_leb.py --tier medium --group analytical"
help = "Generate medium tier analytical group (nodes, Lilith, Uranians)"

[tool.poe.tasks."leb:generate:medium:merge"]
cmd = """python scripts/generate_leb.py --tier medium --merge \
data/leb/ephemeris_medium_planets.leb \
data/leb/ephemeris_medium_asteroids.leb \
data/leb/ephemeris_medium_analytical.leb \
--verify"""
help = "Merge medium tier partial files into ephemeris_medium.leb"

[tool.poe.tasks."leb:generate:medium:groups"]
sequence = ["leb:generate:medium:planets", "leb:generate:medium:asteroids", "leb:generate:medium:analytical", "leb:generate:medium:merge"]
help = "Generate medium tier via groups (planets + asteroids + analytical) then merge"

[tool.poe.tasks."leb:generate:medium:single"]
cmd = "python scripts/generate_leb.py --tier medium --single --verify"
help = "Generate medium tier one body at a time (lowest memory usage)"

[tool.poe.tasks."leb:generate:medium:body"]
cmd = "python scripts/generate_leb.py --tier medium --bodies ${body}"
help = "Generate medium tier for specific body(ies) (e.g. 'moon', '1,2,3', 'sun,mercury')"
args = [{name = "body", positional = true, required = true, help = "Body ID(s) or name(s), comma-separated"}]

# Extended tier group generation
[tool.poe.tasks."leb:generate:extended:planets"]
cmd = "python scripts/generate_leb.py --tier extended --group planets"
help = "Generate extended tier planets group (Sun-Pluto, Earth)"

[tool.poe.tasks."leb:generate:extended:asteroids"]
cmd = "python scripts/generate_leb.py --tier extended --group asteroids"
help = "Generate extended tier asteroids group (Chiron, Ceres-Vesta)"

[tool.poe.tasks."leb:generate:extended:analytical"]
cmd = "python scripts/generate_leb.py --tier extended --group analytical"
help = "Generate extended tier analytical group (nodes, Lilith, Uranians)"

[tool.poe.tasks."leb:generate:extended:merge"]
cmd = """python scripts/generate_leb.py --tier extended --merge \
data/leb/ephemeris_extended_planets.leb \
data/leb/ephemeris_extended_asteroids.leb \
data/leb/ephemeris_extended_analytical.leb \
--verify"""
help = "Merge extended tier partial files into ephemeris_extended.leb"

[tool.poe.tasks."leb:generate:extended:groups"]
sequence = ["leb:generate:extended:planets", "leb:generate:extended:asteroids", "leb:generate:extended:analytical", "leb:generate:extended:merge"]
help = "Generate extended tier via groups (planets + asteroids + analytical) then merge"

[tool.poe.tasks."leb:generate:extended:single"]
cmd = "python scripts/generate_leb.py --tier extended --single --verify"
help = "Generate extended tier one body at a time (lowest memory usage)"

[tool.poe.tasks."leb:generate:extended:body"]
cmd = "python scripts/generate_leb.py --tier extended --bodies ${body}"
help = "Generate extended tier for specific body(ies) (e.g. 'moon', '1,2,3', 'sun,mercury')"
args = [{name = "body", positional = true, required = true, help = "Body ID(s) or name(s), comma-separated"}]

# LEB verify — verify existing .leb files without regenerating
[tool.poe.tasks."leb:verify:base"]
cmd = "python scripts/generate_leb.py --tier base --verify-only"
help = "Verify existing base tier .leb file"

[tool.poe.tasks."leb:verify:medium"]
cmd = "python scripts/generate_leb.py --tier medium --verify-only"
help = "Verify existing medium tier .leb file"

[tool.poe.tasks."leb:verify:extended"]
cmd = "python scripts/generate_leb.py --tier extended --verify-only"
help = "Verify existing extended tier .leb file"

# LEB release — upload generated .leb files to GitHub Releases (data-v1)
# Requires: gh CLI authenticated (gh auth login)
[tool.poe.tasks."release:leb"]
cmd = "python scripts/release_leb.py --version ${version} --update-hashes"
help = "Upload all LEB files to GitHub release and update hashes"
args = [{name = "version", positional = true, required = true, help = "Version string (e.g. 0.22.0)"}]

[tool.poe.tasks."release:leb:base"]
cmd = "python scripts/release_leb.py --version ${version} --tier base --update-hashes"
help = "Upload base tier LEB to GitHub release and update hashes"
args = [{name = "version", positional = true, required = true, help = "Version string (e.g. 0.22.0)"}]

[tool.poe.tasks."release:leb:medium"]
cmd = "python scripts/release_leb.py --version ${version} --tier medium --update-hashes"
help = "Upload medium tier LEB to GitHub release and update hashes"
args = [{name = "version", positional = true, required = true, help = "Version string (e.g. 0.22.0)"}]

[tool.poe.tasks."release:leb:extended"]
cmd = "python scripts/release_leb.py --version ${version} --tier extended --update-hashes"
help = "Upload extended tier LEB to GitHub release and update hashes"
args = [{name = "version", positional = true, required = true, help = "Version string (e.g. 0.22.0)"}]

[tool.poe.tasks."release:leb:dry-run"]
cmd = "python scripts/release_leb.py --version ${version} --dry-run"
help = "Dry run: show what LEB files would be uploaded"
args = [{name = "version", positional = true, required = true, help = "Version string (e.g. 0.22.0)"}]

# Manual build — EPUB and PDF from docs/manual and docs/manual-eng
# Requires: brew install pandoc tectonic
[tool.poe.tasks."manual:build"]
cmd = "python scripts/build_manual.py"
help = "Build all manuals (EPUB + PDF, IT + EN)"

[tool.poe.tasks."manual:build:epub"]
cmd = "python scripts/build_manual.py --format epub"
help = "Build all manuals (EPUB only)"

[tool.poe.tasks."manual:build:pdf"]
cmd = "python scripts/build_manual.py --format pdf"
help = "Build all manuals (PDF only)"

[tool.poe.tasks."manual:build:it"]
cmd = "python scripts/build_manual.py --lang it"
help = "Build Italian manual (EPUB + PDF)"

[tool.poe.tasks."manual:build:en"]
cmd = "python scripts/build_manual.py --lang en"
help = "Build English manual (EPUB + PDF)"

# Manual EPUB generation — no pandoc, Kobo-compatible (ebooklib + markdown)
# Requires: pip install ebooklib markdown pyyaml
[tool.poe.tasks."docs:manual:generate"]
cmd = "python scripts/generate_manual_epub.py"
help = "Generate all manual EPUBs (IT + EN, no pandoc required)"

[tool.poe.tasks."docs:manual:generate:it"]
cmd = "python scripts/generate_manual_epub.py --lang it"
help = "Generate Italian manual EPUB (no pandoc required)"

[tool.poe.tasks."docs:manual:generate:en"]
cmd = "python scripts/generate_manual_epub.py --lang en"
help = "Generate English manual EPUB (no pandoc required)"

[tool.pytest.ini_options]
markers = [
    "leb_compare: LEB vs Skyfield comparison tests (medium tier)",
    "leb_compare_base: LEB vs Skyfield comparison tests (base tier)",
    "leb_compare_extended: LEB vs Skyfield comparison tests (extended tier)",
    "leb_compare_crosstier: Cross-tier consistency tests",
    "slow: Slow tests excluded from default runs",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
exclude = ["compare_scripts"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  compare_scripts
)/
'''

[tool.ruff.lint]
# Ignore star imports (F403, F405) - the library uses star imports for constants
# Ignore unused imports in __init__.py (F401) - re-exports for public API
# Ignore module level imports not at top of file (E402) - intentional for __init__.py
ignore = ["F403", "F405", "F401", "E402"]
# Also ignore unused local variables (F841) for now - complex astronomical calculations
extend-ignore = ["F841"]

[tool.coverage.run]
source = ["libephemeris"]
branch = true
parallel = true
omit = [
    "libephemeris/__pycache__/*",
]

[tool.coverage.paths]
source = [
    "libephemeris/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
